# ner-gateway

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: automerge-action.yml  build-release.yml  release.yml
backend/: Cargo.toml  index.html
backend/src/: config.rs  db.rs  engine.rs  error.rs  handlers.rs  main.rs  tokenizer.rs
training/: ai_review.py  augment_data.py  benchmark.py  export_onnx.py  generate_bio_tags.py  generate_data.py  generate_name_corpus.py  jsonl_to_bio.py  merge_jsonl.py  split_dataset.py  test_onnx.py  train.py
