[package]
name = "ner-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ONNX Runtime (load-dynamic for platforms without prebuilt binaries)
ort = { version = "2.0.0-rc.11", default-features = false, features = ["ndarray", "load-dynamic"] }
ndarray = "0.17"

# Database
rusqlite = { version = "0.38", features = ["bundled"] }
rusqlite_migration = "2.4"

# Utilities
sha2 = "0.10"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
